# innovatecorp-agent

./: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  fly.toml  langgraph.json  nginx.conf  pyproject.toml
.claude/: launch.json
agent/: graph.py  nodes.py  state.py  tools.py
docs/architecture/: langsmith-self-hosted.md
docs/diagrams/: generate_diagrams.py
evaluation/: dataset.py  evaluators.py  run_evals.py
frontend/: Dockerfile  fly.toml  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: Layout.jsx
frontend/src/pages/: AboutPage.jsx  AgentPage.jsx  ApiDocsPage.jsx  TracesPage.jsx
proxy/: main.py
